<resources>
    <string name="app_name">Winners App</string>

    <string name="feedbacktype1">가장 기억에 남는 장소는?</string>
    <string name="feedbacktype2">나의 초등학교 이름은?</string>
    <string name="feedbacktype3">내 애완동물의 이름은?</string>

    <string name="user_name">김재성</string>
    <string name="user_num">32150973</string>
    <string name="user_major">소프트웨어학과</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    // Buttom Menu items
    <string name="Home">홈화면</string>
    <string name="Activity">활동</string>
    <string name="Board">게시판</string>
    <string name="Gallery">갤러리</string>
    <string name="People">구성원</string>

    <string name="Main_Menu">앱 메뉴</string>

    <string name="Setting_Menu">그외 설정</string>
    <string name="Setting">설정</string>
    <string name="Share">공유</string>
    <string name="Rate">앱 평가하기</string>
    <string name="Info">앱 정보</string>
    <string name="Admin">관리자 모드</string>

    <string name="default_notification_channel_id">Channel ID</string>
    <string name="default_notification_channel_name" translatable="true">Test</string>

    <string name="api_key">AIzaSyAf4dWbQ3QuuR3BnGn3DyA0bmOdJ2lwmVA</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

</resources>
