<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_menu"
        android:checkableBehavior="single">
        <item
<<<<<<< HEAD
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_activity"
            android:title="@string/Activity" />
        <item
            android:id="@+id/nav_board"
            android:icon="@drawable/ic_board"
            android:title="@string/Board" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/Gallery" />
        <item
            android:id="@+id/nav_people"
=======
            android:id="@+id/nav_announces"
            android:icon="@drawable/ic_home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_activity"
            android:title="@string/Activity" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_board"
            android:title="@string/Board" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/Gallery" />
        <item
            android:id="@+id/nav_notifications"
>>>>>>> mainscreen
            android:icon="@drawable/ic_people"
            android:title="@string/People" />
    </group>

    <group android:id="@+id/sub_menu">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/Setting" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_share"
            android:title="@string/Share" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_star"
            android:title="@string/Rate" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_info"
            android:title="@string/Info" />
    </group>

</menu>
